# pokeapi

./: Cargo.toml  README.md
src/: errors.rs  main.rs  routes.rs  utils.rs
src/client/: mod.rs  pokeapi_client.rs
src/handlers/: ability_handler.rs  evolution_handler.rs  mod.rs  move_handler.rs  pokemon_handler.rs  type_handler.rs
src/models/: pokemon.rs
src/tests/: integration_test.rs
